# metro-digitale

./: .gitignore  FIRMWARE_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_V2.md  LICENSE  README.md
app_android/: analysis_options.yaml  pubspec.yaml
app_android/lib/: main.dart
app_android/lib/models/: misura_vetro.dart  misura_vetro.g.dart
app_android/lib/providers/: vetri_provider.dart
app_android/lib/screens/: home_screen.dart  report_screen.dart  settings_screen.dart
app_android/lib/services/: bluetooth_service.dart
blitz_integration/: README.md  bluetooth_receiver.py  requirements.txt  semi_auto_bluetooth_mixin.py
configurator/: BUILD.md  CHANGES_SUMMARY.md  FEATURES.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_THREE_SCREENS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PHASE_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  SUMMARY.md  UI_DIAGRAM.md  build.spec  main.py  requirements.txt  test_imports.py
configurator/core/: __init__.py  color_palette.py  config_model.py  esp_uploader.py  formula_parser.py  hardware_config.py  icon_browser.py  icon_manager.py  io_manager.py  project_manager.py
configurator/resources/guides/: tooltips.json
configurator/resources/styles/: dark_theme.qss
configurator/resources/templates/: astine_anta_ribalta.json  calibro_avanzato.json  calibro_semplice.json  fermavetri_standard.json  home_standard.json  impostazioni.json  standard_serramenti.mdp  tipologia_finestra_1a.json  tipologia_finestra_2a.json  vetri_con_battute.json  vetri_lxa.json
configurator/tests/: __init__.py  test_all_changes.py  test_bug_fixes.py  test_canvas_elements.py  test_comprehensive_fixes.py  test_config_model.py  test_config_model_enhanced.py  test_critical_fixes.py  test_formula_parser.py  test_hardware_config.py  test_icon_browser_api.py  test_icon_manager.py  test_io_manager.py  test_new_features.py  test_probe_editor_advanced.py  test_probe_editor_fix.py  test_templates.py  test_toolbox_drag.py  test_tooltip_manager.py  test_typeerror_fixes.py
configurator/ui/: __init__.py  canvas_widget.py  color_picker_dialog.py  formula_editor.py  icon_browser_dialog.py  main_window.py  menu_editor.py  mode_editor_dialog.py  preview_widget.py  probe_editor_dialog.py  properties_panel.py  simulation_dialog.py  template_browser_dialog.py  tipologia_editor.py  toolbox_widget.py  tooltip_manager.py  upload_dialog.py
configurator/widgets/: __init__.py
docs/: PROBE_EDITOR_IMPROVEMENTS.md  PROBE_EDITOR_VISUAL_GUIDE.md  calibration.md  config_schema.md  hardware.md  modes.md  protocol.md  storage.md  troubleshooting.md  wiring.md
firmware/: CMakeLists.txt  FIRMWARE_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README_FIRMWARE.md  README_SD_USB.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  bluetooth.c  bluetooth.h  config.c  config.h  encoder.c  encoder.h  formula_parser.c  formula_parser.h  main.c  storage.c  storage.h
firmware/main/ble/: ble_multi_device.c  ble_multi_device.h  ble_server.c  ble_server.h
firmware/main/display/: display_rgb.c  display_rgb.h  touch_gt911.c  touch_gt911.h
firmware/main/feedback/: buzzer_feedback.c  buzzer_feedback.h  led_feedback.c  led_feedback.h
firmware/main/hardware/: button_send.c  button_send.h  buzzer.c  buzzer.h  encoder_reader.c  encoder_reader.h  hardware_gpio.c  hardware_gpio.h  sd_card.c  sd_card.h
firmware/main/measurement/: measure_calculator.c  measure_calculator.h  measure_sender.c  measure_sender.h  mode_device_routing.c  mode_device_routing.h
firmware/main/modes/: calibro_advanced.c  calibro_advanced.h  mode_astine.c  mode_astine.h  mode_fermavetri.c  mode_fermavetri.h  mode_vetri.c  mode_vetri.h
firmware/main/puntali/: puntale_circular.c  puntale_circular.h  puntale_database.c  puntale_database.h  puntale_types.c  puntale_types.h  stl_parser.c  stl_parser.h
firmware/main/storage/: storage_manager.c  storage_manager.h
firmware/main/ui/: bottom_nav.c  bottom_nav.h  gesture_handler.c  gesture_handler.h  screen_astine.c  screen_astine.h  screen_calibro_advanced.c  screen_calibro_advanced.h  screen_settings.c  screen_settings.h  screen_vetri_wizard.c  screen_vetri_wizard.h  ui_astine.c  ui_calibro.c  ui_main.c  ui_manager.c  ui_manager.h  ui_mode_select.c  ui_rilievi_speciali.c  ui_settings.c  ui_styles.c  ui_styles.h  ui_tipologie.c  ui_toast.c  ui_toast.h  ui_vetri.c  wizard_zero.c  wizard_zero.h
firmware/tests/: README.md  test_buzzer.c
preview/: ui_preview.html  ui_preview_old.html  ui_preview_v2.html
